--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -50,18 +50,22 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    overflow: hidden; /* scroll engellemek için */
+    overflow: hidden; 
   }
   
-  .phone {
-    width: 100vw;
-    height: 100vh;
-    border-radius: 0;
-    max-width: 100vw;
-    max-height: 100vh;
-    box-shadow: none; /* istersen shadow kaldır */
-     overflow-y: auto; /* içerik scrollable */
-  }
+.phone {
+  width: 100vw;       /* ekran genişliği kadar */
+  height: 100vh;      /* ekran yüksekliği kadar */
+  max-width: 100vw;
+  max-height: 100vh;
+  border-radius: 0;
+  box-shadow: none;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+
   .phone .status-bar {
     display: none !important;
     position: static !important;
