--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -54,10 +54,10 @@ body {
   }
   
 .phone {
-  width: 100vw;       /* ekran genişliği kadar */
-  height: 100vh;      /* ekran yüksekliği kadar */
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 100%;     
+  height: 100%;      
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 0;
   box-shadow: none;
   overflow-y: auto;
