--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -65,6 +65,14 @@ body {
   flex-direction: column;
 }
 
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-top: 0;
+    z-index: 1000;
+  }
 
   .phone .status-bar {
     display: none !important;
