--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,12 +46,13 @@ body {
 }
 
 @media (max-width: 768px) {
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    overflow: hidden; 
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;     
+  overflow-y: auto; 
+}
+
   
 .phone {
   width: 100%;     
