--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -50,7 +50,6 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;     
-  overflow-y: auto; 
 }
 
   
@@ -64,6 +63,9 @@ html, body {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
+  padding-bottom: 100px;
+  padding-top:100px ; 
 }
 
   .bottom-nav {
