--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -47,17 +47,14 @@ body {
 
 @media (max-width: 768px) {
 html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;     
+  margin: 0 !important;
+  padding: 0 !important;   
 }
 
   
 .phone {
   width: 100%;     
   height: 100%;      
-  max-width: 100%;
-  max-height: 100%;
   border-radius: 0;
   box-shadow: none;
   overflow-y: auto;
@@ -65,7 +62,7 @@ html, body {
   flex-direction: column;
   overflow-y: auto;
   padding-bottom: 150px;
-  padding-top:150px ; 
+  padding-top: 50px;
 }
 
   .bottom-nav {
