--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,45 +46,54 @@ body {
 }
 
 @media (max-width: 768px) {
-html, body {
-  margin: 0 !important;
-  padding: 0 !important;   
-}
+  html, body {
+    margin: 0 !important;
+    padding: 0 !important;
+    min-height: 100vh;
+    background: #fff;
+  }
 
-  
-.phone {
-  width: 100%;     
-  height: 100%;      
-  border-radius: 0;
-  box-shadow: none;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  padding-bottom: 150px;
-  padding-top: 50px;
-}
+  .phone {
+    width: 100%;
+    min-height: 100vh;    
+    border-radius: 0;
+    box-shadow: none;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px; 
+  }
 
   .bottom-nav {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    margin-top: 0;
     z-index: 1000;
   }
 
   .phone .status-bar {
     display: none !important;
-    position: static !important;
   }
+
   .header {
-  position: sticky;
-  top: 0;
-  z-index: 20; 
-  background: #fff;
+    position: fixed;
+    top: 0;
+    width: 350px;
+    z-index: 20;
+    background: #fff;
+  }
+  .animals{
+    padding-top:70px !important;
+  }
+    .learn{
+    padding-top:70px !important;
+  }
+    .feed{
+    padding-top:85px !important;
+  }
 }
-}
+
 
 
 .phone::-webkit-scrollbar {
