Mobil scroll ve navbar/header düzeltmeleri

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -79,7 +79,7 @@ body {
   .header {
     position: fixed;
     top: 0;
-    width: 350px;
+    width: calc(100% - 25px);
     z-index: 20;
     background: #fff;
   }
